[gd_scene load_steps=9 format=2]

[ext_resource path="res://nodes/Platers/PlaterBase/PlaterBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://nodes/Platers/Pusher/Pusher.gd" type="Script" id=2]
[ext_resource path="res://assets/Models/Platers/Pusher/Pusher.dae" type="PackedScene" id=3]

[sub_resource type="Gradient" id=1]


[sub_resource type="GradientTexture" id=2]

gradient = SubResource( 1 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 1.1, 0.97, 1.1 )

[sub_resource type="BoxShape" id=4]

extents = Vector3( 0.5, 0.233204, 0.5 )

[sub_resource type="BoxShape" id=5]

extents = Vector3( 1, 0.82, 1 )

[node name="Pusher" index="0" instance=ExtResource( 1 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
script = ExtResource( 2 )
GUI_Illustration = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="PlaterPlacementDetection" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.42521, 0 )
shape = SubResource( 3 )

[node name="BodyDetector" type="Area" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.426206, 0 )
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="BodyDetector" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.08138, 0 )
shape = SubResource( 4 )

[node name="ExtendedTimer" type="Timer" parent="." index="2"]
wait_time = 0.5
one_shot = true

[node name="Position3D" type="Position3D" parent="." index="3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )

[node name="Model" parent="." index="4" instance=ExtResource( 3 )]
editor/display_folded = true

[node name="StaticBody" type="StaticBody" parent="." index="5"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.456296, 0 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00184998, 0 )
shape = SubResource( 5 )

[node name="Base" parent="." index="6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.30275, 0 )

[node name="PlaterPlacementPopup" parent="." index="9"]
visible = false
minAngle = -0.785
maxAngle = 3.925

[node name="Translation" parent="PlaterPlacementPopup" index="2"]
visible = false
margin_left = 10.0
margin_top = 0.0
margin_right = 50.0
margin_bottom = 40.0

[node name="Rotation" parent="PlaterPlacementPopup" index="3"]
visible = false
margin_left = -10.0
margin_top = 1.22465e-15
margin_right = 30.0
margin_bottom = 40.0

[connection signal="body_entered" from="BodyDetector" to="." method="_on_BodyDetector_body_entered"]
[connection signal="timeout" from="ExtendedTimer" to="." method="_on_ExtendedTimer_timeout"]

[editable path="Model"]

[editable path="PlaterPlacementPopup"]
